# docs/swagger.yaml
@@ -449,6 +449,19 @@ definitions:
     - question_id
     - status
     type: object
+  schema.AnnouncementPopupResp:
+    properties:
+      create_time:
+        type: integer
+      description:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+      url_title:
+        type: string
+    type: object
   schema.AnswerAddReq:
     properties:
       captcha_code:
@@ -1719,10 +1732,18 @@ definitions:
       id:
         type: string
       operation:
-        description: operation [pin unpin hide show]
+        description: operation [pin unpin hide show feature unfeature]
+        enum:
+        - pin
+        - unpin
+        - hide
+        - show
+        - feature
+        - unfeature
         type: string
     required:
     - id
+    - operation
     type: object
   schema.PermissionMemberAction:
     properties:
@@ -1853,6 +1874,8 @@ definitions:
         items:
           $ref: '#/definitions/schema.PermissionMemberAction'
         type: array
+      featured:
+        type: integer
       first_answer_id:
         type: string
       follow_count:
@@ -1919,6 +1942,7 @@ definitions:
         - unanswered
         - recommend
         - frequent
+        - featured
         type: string
       page:
         minimum: 1
@@ -1943,12 +1967,19 @@ definitions:
         type: string
       answer_count:
         type: integer
+      author:
+        allOf:
+        - $ref: '#/definitions/schema.QuestionPageRespOperator'
+        description: author information
       collection_count:
         type: integer
       created_at:
         type: integer
       description:
         type: string
+      featured:
+        description: '1: normal, 2: featured'
+        type: integer
       follow_count:
         type: integer
       id:
@@ -6718,6 +6749,27 @@ paths:
       summary: update question
       tags:
       - Question
+  /answer/api/v1/question/announcement/popup:
+    post:
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/handler.RespBody'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/schema.AnnouncementPopupResp'
+                  type: array
+              type: object
+      security:
+      - ApiKeyAuth: []
+      summary: claim unread site announcement popups
+      tags:
+      - Question
   /answer/api/v1/question/answer:
     post:
       consumes:
@@ -6865,7 +6917,7 @@ paths:
     put:
       consumes:
       - application/json
-      description: Operation question \n operation [pin unpin hide show]
+      description: Operation question \n operation [pin unpin hide show feature unfeature]
       parameters:
       - description: question
         in: body
